Fix #1, fix logger replacement

--- a/Renderer/ImGuiVulkanRenderer.vcxproj
+++ b/Renderer/ImGuiVulkanRenderer.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImGuiVulkanRenderer.cpp" />
+    <ClCompile Include="Logger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
