--- a/Renderer/ImGuiVulkanRenderer.vcxproj.filters
+++ b/Renderer/ImGuiVulkanRenderer.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="ImGuiVulkanRenderer.cpp">
       <Filter>Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="Logger.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
