--- a/ImGuiVulkanRenderer.props
+++ b/ImGuiVulkanRenderer.props
@@ -1,15 +1,16 @@
-﻿<!-- Place this file one level before the ImGuiVulkanRenderer folder.
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!-- Place this file one level before the ImGuiVulkanRenderer folder.
 -->
-<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ImportGroup Label="PropertySheets"/>
-  <PropertyGroup Label="UserMacros"/>
+  <ImportGroup Label="PropertySheets" />
+  <PropertyGroup Label="UserMacros" />
   <ItemDefinitionGroup>
     <ClCompile>
 	  <!-- Add the directory locations for imgui headers and vulkan headers below
+	       Note that the root for the path is /ImGuiVulkanRenderer/Renderer/
 	  -->
-      <AdditionalIncludeDirectories>../vulkan/include;../imgui/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../Vulkan-LoaderAndValidationLayers/include/;../../imgui/</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup/>
+  <ItemGroup />
 </Project>
